# polarssl

./: configure.ac
include/polarssl/: Makefile.am
m4/: pkg.m4
