polarssldir=$(includedir)/polarssl

polarssl_HEADERS= \
aes.h \
aesni.h \
arc4.h \
asn1.h \
asn1write.h \
base64.h \
bignum.h \
blowfish.h \
bn_mul.h \
camellia.h \
ccm.h \
certs.h \
check_config.h \
cipher.h \
cipher_wrap.h \
compat-1.2.h \
config.h \
ctr_drbg.h \
debug.h \
des.h \
dhm.h \
ecdh.h \
ecdsa.h \
ecp.h \
entropy.h \
entropy_poll.h \
error.h \
gcm.h \
havege.h \
hmac_drbg.h \
md.h \
md_wrap.h \
md2.h \
md4.h \
md5.h \
memory.h \
memory_buffer_alloc.h \
net.h \
oid.h \
openssl.h \
padlock.h \
pbkdf2.h \
pem.h \
pk.h \
pk_wrap.h \
pkcs11.h \
pkcs12.h \
pkcs5.h \
platform.h \
ripemd160.h \
rsa.h \
sha1.h \
sha256.h \
sha512.h \
ssl.h \
ssl_cache.h \
ssl_ciphersuites.h \
threading.h \
timing.h \
version.h \
x509.h \
x509_crl.h \
x509_crt.h \
x509_csr.h \
xtea.h 

EXTRA_DIST=$(polarssl_HEADERS)
